--- a/src/client/styles/result.css
+++ b/src/client/styles/result.css
@@ -50,7 +50,9 @@
         
 }
 
-.btn-delete:hover{
+.btn-delete:hover,
+.btn-delete:active
+{
     background-image: linear-gradient(to right,#1f4037,#99f2c8); 
     transition: color 0.5s ease-out;
 
@@ -67,6 +69,7 @@
     border-radius: 20px;
     cursor: pointer;
 }
+.btn-back:hover,
 .btn-back:hover{
     background-color: black;
     border: 1px solid gray;
@@ -81,3 +84,29 @@
 .result span{
     background-color: rgb(106, 255, 47);
 }
+
+@media only screen and (max-width: 768px) {
+    #result-section{
+         height: 50vh;
+         padding: 5em 0 2em 0;
+    }
+
+    .result-image{
+        display: none;
+           
+    }
+    .result-holder{
+        width: 80%;
+    }
+    .result{
+        width: 100%;
+       
+    }
+    .btn-back,
+    .btn-delete{
+       padding: 0.5em 2em;
+    }
+    .btn-back{
+        margin: 0.5em 0 0 0.5em;
+    }
+  } 
