--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Time to Travel | Travel Planner App</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="../js/promiseHandler.js"></script>
+  <script src="../js/app.js"></script>
   <link rel="stylesheet" href="../styles/header.css">
   <link rel="stylesheet" href="../styles/home.css">
   <link rel="stylesheet" href="../styles/root.css">
@@ -43,7 +45,7 @@
                 aut fugit, sed quia consequuntur magni aut odit
                 dolores eos qui ratione voluptatem sequi nesciunt. 
             </p>
-            <button type="button" class="btn">Add Trip</button>
+            <button type="button" class="btn"><a href="#form-section">Add Trip</a></button>
         </div>
         </section>
         <!-- form-section -->
@@ -97,7 +99,7 @@
     <!-- footer -->
     <footer>
         <div class="footer-text">
-           <p class="email">Email: duumy@gtmail.com</p>
+           <p class="email">Email: dumy@gail.com</p>
             <p class="tel">Tel: 098-864-643-786</p>
         </div>
         <div class="social">
