--- a/src/client/styles/form.css
+++ b/src/client/styles/form.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     font-family: 'Comic Neue', cursive;
     color: black;
-    padding: 8em 0 5em 0;
+    padding: 8em 0 4em 0;
     background-size: cover;
     height: 70vh;
     
@@ -26,6 +26,7 @@
     display: flex;
     justify-content: space-between;
 }
+
 .form-image{
     width: 35%;
     height: auto;
@@ -69,4 +70,22 @@ input[type="date"] {
     text-align: left;
     margin: 0;
 }
-               
+
+@media only screen and (max-width: 768px) {
+    #form-section{
+       padding: 5em 0 1em 0;
+       height: 50vh;
+                
+    }
+    .form-holder{
+        width: 80%;
+    }
+    .form-image{
+        display: none;
+       
+    }
+    .form{
+        width: 100%;
+     
+    }
+  }                
