--- a/src/client/styles/root.css
+++ b/src/client/styles/root.css
@@ -17,3 +17,9 @@ a{
     text-decoration: none;
     color: inherit;
 }
+@media only screen and (max-width: 768px) {
+    html,
+    body{
+       font-size: 14px;
+    }
+  } 
